# NeuroSketch

./: .gitignore  CONTRIBUTING.md  README.md  install_hla_extension.ps1  install_neurosketch_extension.ps1  open_hla_sidepanel.ps1  open_neurosketch_sidepanel.ps1  pyproject.toml  train.py
docs/: PROJECT_ANALYSIS.md
examples/: cnn_example.py
hussain_livetorch_architect/: __init__.py  cli.py  exporters.py  ir.py  live_demo.py  runtime_verifier.py  static_parser.py
neurosketch/: __init__.py  cli.py  exporters.py  live_demo.py  merge.py  runtime_verifier.py
tests/: test_exporters.py  test_live_demo.py  test_merge.py  test_runtime_verifier.py  test_static_parser.py
vscode_hla_sidepanel/: README.md  package-lock.json  package.json
vscode_hla_sidepanel/src/: extension.ts
vscode_neurosketch_sidepanel/: README.md  package-lock.json  package.json
vscode_neurosketch_sidepanel/src/: extension.ts
