[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosketch"
version = "0.1.0"
description = "NeuroSketch: hybrid static/runtime deep-learning architecture diagram generator with a PyTorch-first MVP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
runtime = ["torch>=2.2"]
export = ["graphviz>=0.20"]
dev = ["pytest>=8.0"]

[project.scripts]
neurosketch = "neurosketch.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
